--- a/BatteryToolkit/Views/Main/Base.lproj/Main.storyboard
+++ b/BatteryToolkit/Views/Main/Base.lproj/Main.storyboard
@@ -368,7 +368,7 @@
                                 <action selector="chargeToMaximumHandlerWithSender:" target="Yoz-Et-jXW" id="kEt-T6-WQS"/>
                             </connections>
                         </menuItem>
-                        <menuItem title="Cancel Charging Request" hidden="YES" keyEquivalent="d" id="ULK-Wm-406">
+                        <menuItem title="Cancel Charging Request" keyEquivalent="d" id="ULK-Wm-406">
                             <connections>
                                 <action selector="disableChargingHandlerWithSender:" target="Yoz-Et-jXW" id="LUb-fi-hvv"/>
                             </connections>
